# static_uint

./: CMakeLists.txt  README.md
include/qg/: static_uint.hpp
test/: CMakeLists.txt  test.cpp
